[package]
name = "etols-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git", branch = "master" }
etols-frame = {path = "../etols-frame"}
tracing-subscriber = "0.3"